# IPPAN-L2

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.eth-oracle-daemon  Dockerfile.fin-node  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.yml  openapi.yaml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
configs/: dev.toml  devnet.toml  ha-consul.toml  ha-node1.toml  ha-node2.toml  ha-redis.toml  ha-sled.toml  local.toml  prod.toml
crates/ippan-rpc/: Cargo.toml
crates/ippan-rpc/src/: lib.rs
crates/l2-batcher/: Cargo.toml
crates/l2-batcher/benches/: batcher_benchmarks.rs
crates/l2-batcher/src/: async_l1_client.rs  contract_bridge.rs  gbdt_organiser.rs  gbdt_organiser_v2.rs  lib.rs  reconciler.rs
crates/l2-batcher/tests/: multihub_fairness.rs  organiser_determinism.rs
crates/l2-bench/: Cargo.toml
crates/l2-bench/src/: lib.rs  main.rs  runner.rs
crates/l2-bench/src/scenarios/: batcher.rs  bridge.rs  m2m.rs  mod.rs  organiser.rs  reconciler.rs
crates/l2-bridge/: Cargo.toml
crates/l2-bridge/benches/: bridge_benchmarks.rs
crates/l2-bridge/src/: eth_adapter.rs  eth_headers_api.rs  eth_headers_verify.rs  eth_lightclient_api.rs  eth_lightclient_reconciler.rs  eth_lightclient_verify.rs  eth_merkle.rs  external_proof_api.rs  external_proof_reconciler.rs  intent_api.rs  intent_metrics.rs  intent_reconciler.rs  intents.rs  lib.rs
crates/l2-bridge/tests/: eth_lightclient_vectors.rs  eth_merkle_vectors.rs  execution_header_path.rs  external_proofs.rs  intent_atomicity.rs
crates/l2-core/: Cargo.toml
crates/l2-core/benches/: core_benchmarks.rs
crates/l2-core/src/: batch_envelope.rs  bench.rs  canonical.rs  eth_header.rs  eth_lightclient.rs  external_proof.rs  fees.rs  finality.rs  forced_inclusion.rs  intent.rs  lib.rs  organiser.rs
crates/l2-core/src/l1_contract/: http_client.rs  mock_client.rs
crates/l2-core/src/storage_encryption/: xchacha20poly1305.rs
crates/l2-core/tests/: canonical_encoding.rs  l1_contract_golden_v1.rs
crates/l2-core/tests/fixtures/: l2_batch.json  settlement_request.json
crates/l2-core/tests/fixtures/l1_contract/v1/: hub_payload_envelope_v1.json
crates/l2-engine/: Cargo.toml
crates/l2-engine/src/: lib.rs
crates/l2-hub/: Cargo.toml
crates/l2-hub/src/: lib.rs
crates/l2-leader/: Cargo.toml
crates/l2-leader/src/: lib.rs
crates/l2-node/: Cargo.toml
crates/l2-node/src/: main.rs
crates/l2-node/tests/: devnet_e2e.rs  security_mode.rs  staging_auth_gating.rs
crates/l2-storage/: Cargo.toml
crates/l2-storage/src/: eth_headers.rs  eth_lightclient.rs  external.rs  intents.rs  lib.rs  m2m.rs  m2m_ops.rs  settlement.rs
crates/l2-storage/tests/: m2m_invariants.rs
docs/: API.md  API_VERSIONING.md  ARCHITECTURE.md  AUDIT_MODE.md  BOOTSTRAP.md  BOOTSTRAP_MIRRORS.md  BOOTSTRAP_P2P.md  BOOTSTRAP_TRUST.md  BRIDGE_EXTERNAL.md  COMPLIANCE.md  CONFIG.md  DASHBOARD.md  DEPLOY.md  DEPRECATION.md  DEV.md  DEVNET.md  DR.md  ENCRYPTION_AT_REST.md  FINALITY.md  (+30 more)
fin-node/: Cargo.toml  fin-node.example.toml
fin-node/src/: audit.rs  audit_store.rs  bootstrap.rs  bootstrap_mirror_health.rs  bootstrap_remote.rs  bootstrap_store.rs  config.rs  data_api.rs  fin_api.rs  http_server.rs  lib.rs  linkage.rs  main.rs  metrics.rs  policy_runtime.rs  policy_store.rs  pruning.rs  rate_limit.rs  recon.rs  recon_store.rs  snapshot.rs
fin-node/src/bootstrap/: source.rs
fin-node/src/crypto/: aead.rs  archive.rs  key_provider.rs  mod.rs  tools.rs
fin-node/src/ha/: consul_lock.rs  leader_lock.rs  lock_provider.rs  mod.rs  redis_lock.rs  supervisor.rs
fin-node/tests/: audit_mode_v1.rs  bootstrap_mirrors_quorum.rs  bootstrap_p2p_peers.rs  bootstrap_roundtrip.rs  compliance_policy.rs  fin_api_mock.rs  finality_reconciliation.rs  integration_mock.rs  linkage_workflow.rs  remote_bootstrap_fetch.rs  remote_bootstrap_signing.rs  snapshots_roundtrip.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_fin_action/: create_asset
fuzz/fuzz_targets/: fuzz_external_proof.rs  fuzz_fin_action.rs  fuzz_mpt_proof.rs  fuzz_rlp_receipt.rs
hub-data/: Cargo.toml
hub-data/src/: actions.rs  apply.rs  envelope.rs  lib.rs  store.rs  types.rs  validation.rs
hub-data/tests/: gen_goldens.rs  mvp_v1.rs  policy_v1.rs  state_version.rs
hub-data/tests/fixtures/: append_attestation_v1.action.canon.json  append_attestation_v1.action_id.hex  append_attestation_v1.envelope.canon.json  create_listing_v1.action.canon.json  create_listing_v1.action_id.hex  create_listing_v1.envelope.canon.json  grant_entitlement_v1.action.canon.json  grant_entitlement_v1.action_id.hex  grant_entitlement_v1.envelope.canon.json  issue_license_v1.action.canon.json  issue_license_v1.action_id.hex  issue_license_v1.envelope.canon.json  register_dataset_v1.action.canon.json  register_dataset_v1.action_id.hex  register_dataset_v1.envelope.canon.json
hub-fin/: Cargo.toml
hub-fin/src/: actions.rs  apply.rs  canonical.rs  envelope.rs  lib.rs  store.rs  types.rs  validation.rs
hub-fin/tests/: gen_goldens.rs  mvp_v1.rs  policy_v1.rs  state_version.rs
hub-fin/tests/fixtures/: create_asset_v1.action.canon.json  create_asset_v1.action_id.hex  create_asset_v1.envelope.canon.json  mint_units_v1.action.canon.json  mint_units_v1.action_id.hex  mint_units_v1.envelope.canon.json  transfer_units_v1.action.canon.json  transfer_units_v1.action_id.hex  transfer_units_v1.envelope.canon.json
integrations/eth-oracle/daemon/: Cargo.toml
integrations/eth-oracle/daemon/src/: config.rs  diff.rs  eth_oracle.rs  ippan_client.rs  lib.rs  main.rs  model.rs
integrations/eth-oracle/daemon/tests/: config_test.rs  diff_scores_test.rs
l2-core/: Cargo.toml
l2-core/src/: lib.rs
l2-core/src/hub_linkage/: mod.rs
l2-core/src/l1_contract/: http_client.rs  mock_client.rs  mod.rs
l2-core/src/policy/: mod.rs
l2-core/src/signing/: mod.rs
l2-core/src/storage_encryption/: mod.rs  value_v1.rs
l2-core/tests/: golden_fixtures.rs  l1_contract_golden_v1.rs
l2-core/tests/fixtures/l1_contract/v1/: expected_hashes.json
(+72 files in other folders)
