[workspace]
members = [
  "l2-core",
  "hub-fin",
  "fin-node",
  "hub-data",
  "integrations/eth-oracle/daemon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dmrl789/IPPAN-L2"
rust-version = "1.80.0"
authors = ["IPPAN Contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
float_arithmetic = "deny"
float_cmp = "deny"
cast_precision_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
disallowed_types = "deny"
