[package]
name = "fin-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "IPPAN FIN Node - Executable binary for the Finance Hub"

[lints]
workspace = true

[dependencies]
hub-fin = { path = "../hub-fin" }
l2-core = { path = "../l2-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
toml = "0.8"
