[package]
name = "fin-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "IPPAN FIN Node - Executable binary for the Finance Hub"

[lints]
workspace = true

[dependencies]
hub-fin = { path = "../hub-fin" }
l2-core = { path = "../l2-core", features = ["l1-http"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tiny_http = "0.12"
prometheus = "0.13"
once_cell = "1"
time = { version = "0.3", features = ["formatting"] }
base64 = "0.22"
blake3 = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
