[package]
name = "fin-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "IPPAN FIN Node - Executable binary for the Finance Hub"

[lints]
workspace = true

[dependencies]
hub-fin = { path = "../hub-fin" }
hub-data = { path = "../hub-data" }
l2-core = { path = "../l2-core", features = ["l1-http"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tiny_http = "0.12"
prometheus = "0.14"
once_cell = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
base64 = "0.22"
blake3 = "1"
hex = "0.4"
sled = "0.34"
signal-hook = "0.3"
redis = { version = "0.27", optional = true }
tar = "0.4"
tempfile = "3"

[features]
default = []
ha-redis = ["dep:redis"]
ha-consul = []

[dev-dependencies]
assert_cmd = "2"
