[package]
name = "ippan-l2-fuzz"
version = "0.0.1"
authors = ["IPPAN Contributors"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

# Workspace crates to fuzz
l2-core = { path = "../crates/l2-core" }
l2-bridge = { path = "../crates/l2-bridge", features = ["merkle-proofs"] }
hub-fin = { path = "../hub-fin" }
hub-data = { path = "../hub-data" }

# For RLP parsing
alloy-rlp = "0.3"
alloy-primitives = "0.8"

# For JSON parsing
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "fuzz_rlp_receipt"
path = "fuzz_targets/fuzz_rlp_receipt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_mpt_proof"
path = "fuzz_targets/fuzz_mpt_proof.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_external_proof"
path = "fuzz_targets/fuzz_external_proof.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fin_action"
path = "fuzz_targets/fuzz_fin_action.rs"
test = false
doc = false
bench = false
