[package]
name = "hub-data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "IPPAN DATA Hub - Content attestations and data provenance"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
l2-core = { path = "../l2-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
