[package]
name = "hub-data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "IPPAN DATA Hub - Content attestations and data provenance"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
l2-core = { path = "../l2-core" }
blake3 = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sled = "0.34"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
