[package]
name = "hub-fin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "IPPAN FIN Hub - Finance, RWA, and stablecoin operations"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
l2-core = { path = "../l2-core" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
hex = "0.4"
base64 = "0.22"
sled = "0.34"

[dev-dependencies]
tempfile = "3"
