[package]
name = "l2-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core types and primitives for IPPAN L2 Hubs"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
