[package]
name = "l2-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core types and primitives for IPPAN L2 Hubs"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
base64 = "0.22"
tracing = "0.1"

reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"], optional = true }

[features]
default = []
## Enable the HTTP transport adapter for the L1 contract client.
l1-http = ["dep:reqwest"]

[dev-dependencies]
serde_json = "1"
