[package]
name = "l2-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Deterministic benchmark suite for IPPAN L2"

[[bin]]
name = "l2-bench"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
l2-core = { path = "../l2-core", features = ["signed-envelopes"] }
l2-batcher = { path = "../l2-batcher" }
l2-storage = { path = "../l2-storage" }

clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
blake3 = "1"
tempfile = "3"
sled = "0.34"

# For system info
sysinfo = "0.31"

[dev-dependencies]
tempfile = "3"
