[package]
name = "l2-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Bridge/watch skeleton for IPPAN L2"

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
base64 = "0.22"
l2-core = { path = "../l2-core" }
l2-storage = { path = "../l2-storage" }
ippan-rpc = { path = "../ippan-rpc" }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
ed25519-dalek = { version = "2", optional = true }
# Ethereum RLP and Merkle Patricia Trie verification
alloy-rlp = { version = "0.3", optional = true }
alloy-primitives = { version = "0.8", optional = true }
sha3 = { version = "0.10", optional = true }
blake3 = { version = "1", optional = true }
# BLS signature verification for Ethereum PoS light client
blst = { version = "0.3", optional = true }
# SHA-256 for SSZ hashing
sha2 = { version = "0.10", optional = true }
hex-literal = { version = "0.4", optional = true }

[features]
default = []
## Enable Ed25519 signature verification for external proof attestations.
signed-envelopes = ["dep:ed25519-dalek", "l2-core/signed-envelopes"]
## Enable Ethereum Merkle Patricia Trie receipt proof verification.
merkle-proofs = ["dep:alloy-rlp", "dep:alloy-primitives", "dep:sha3", "dep:blake3"]
## Enable Ethereum header chain verification (light client MVP).
eth-headers = ["l2-core/keccak-headers", "l2-storage/eth-headers", "merkle-proofs"]
## Enable Ethereum PoS sync committee light client verification.
eth-lightclient = ["l2-storage/eth-lightclient", "merkle-proofs", "dep:blst", "dep:sha2", "dep:hex-literal"]
## Enable profiling spans for flamegraph-friendly tracing.
profiling = ["l2-core/profiling"]

[dev-dependencies]
tempfile = "3"
sled = "0.34"
criterion = "0.5"
blake3 = "1"

[[bench]]
name = "bridge_benchmarks"
harness = false
