[package]
name = "l2-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core types and primitives for IPPAN L2 Hubs"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
base64 = "0.22"
tracing = "0.1"
hex = "0.4"
bincode = { version = "1" }
ed25519-dalek = { version = "2", optional = true }
chacha20poly1305 = { version = "0.10", features = ["std"], optional = true }
getrandom = { version = "0.2", optional = true }

reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"], optional = true }

[features]
default = []
## Enable the HTTP transport adapter for the L1 contract client.
l1-http = ["dep:reqwest"]
## Enable signed envelope types and signing helpers (v1).
signed-envelopes = ["dep:ed25519-dalek"]
## Enable operational encryption-at-rest helpers (AEAD, formats, traits).
encryption-at-rest = ["dep:chacha20poly1305", "dep:getrandom"]

[dev-dependencies]
serde_json = "1"
ed25519-dalek = "2"
