[package]
name = "l2-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
l2-core = { path = "../l2-core" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
