[package]
name = "l2-leader"
description = "IPPAN L2 leader rotation and election logic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
ed25519-dalek = { version = "2.2", features = ["serde"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
rand = "0.9"
serde_json = "1"

[lints]
workspace = true
