[package]
name = "l2-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Sled-backed storage for IPPAN L2 node"

[lints]
workspace = true

[dependencies]
l2-core = { path = "../l2-core" }
sled = "0.34"
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
blake3 = "1"

[features]
default = []
## Enable Ethereum header storage (requires keccak-headers in l2-core).
eth-headers = ["l2-core/keccak-headers"]
## Enable Ethereum PoS light client storage.
eth-lightclient = []

[dev-dependencies]
tempfile = "3"
